// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea should render correctly 1`] = `
"<div class=\\"wrapper   lined  \\"><textarea placeholder=\\"placeholder\\"></textarea><style>
          .wrapper {
            position: inherit;
            display: inline-flex;
            box-sizing: border-box;
            user-select: none;
            width: initial;
            min-width: 12.5rem;
            max-width: 95vw;
            height: auto;
            border-radius: 4px;
            color: #282d30;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: #fdfdfe;
            border: 1px solid #ebeced;
          }

          .wrapper.hover:not(.disabled),
          .wrapper.focus:not(.disabled) {
            border-color: #0054fe;
            background-color: #fdfdfe;
          }

          .wrapper.disabled {
            color: #ebeced;
            border-color: #ebeced;
            cursor: not-allowed;
            opacity: 0.5;
          }

          textarea {
            background-color: transparent;
            box-shadow: none;
            display: block;
            font-family: \\"Circular Std Book\\", \\"PingFang SC\\", -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif;
            font-size: 0.875rem;
            width: 100%;
            height: 100%;
            min-height: 6.25rem;
            resize: none;
            border: none;
            outline: none;
            padding: calc(16px * 0.875) calc(16px * 0.75);
          }

          textarea:disabled {
            cursor: not-allowed;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-textarea-placeholder {
            color: #9b9eac;
          }

          textarea:-webkit-autofill,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:focus {
            -webkit-background-clip: text;
          }

          textarea:-webkit-autofill,
          textarea:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
          }
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fdfdfe inset !important;
          }
        </style></div>"
`;

exports[`Textarea should work with different styles 1`] = `
"<div><div class=\\"wrapper   lined  \\"><textarea></textarea><style>
          .wrapper {
            position: inherit;
            display: inline-flex;
            box-sizing: border-box;
            user-select: none;
            width: initial;
            min-width: 12.5rem;
            max-width: 95vw;
            height: auto;
            border-radius: 4px;
            color: #282d30;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: #fdfdfe;
            border: 1px solid #c0d8fc;
          }

          .wrapper.hover:not(.disabled),
          .wrapper.focus:not(.disabled) {
            border-color: #0054fe;
            background-color: #fdfdfe;
          }

          .wrapper.disabled {
            color: #ebeced;
            border-color: #ebeced;
            cursor: not-allowed;
            opacity: 0.5;
          }

          textarea {
            background-color: transparent;
            box-shadow: none;
            display: block;
            font-family: \\"Circular Std Book\\", \\"PingFang SC\\", -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif;
            font-size: 0.875rem;
            width: 100%;
            height: 100%;
            min-height: 6.25rem;
            resize: none;
            border: none;
            outline: none;
            padding: calc(16px * 0.875) calc(16px * 0.75);
          }

          textarea:disabled {
            cursor: not-allowed;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-textarea-placeholder {
            color: #9b9eac;
          }

          textarea:-webkit-autofill,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:focus {
            -webkit-background-clip: text;
          }

          textarea:-webkit-autofill,
          textarea:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
          }
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fdfdfe inset !important;
          }
        </style></div><div class=\\"wrapper   lined  \\"><textarea></textarea><style>
          .wrapper {
            position: inherit;
            display: inline-flex;
            box-sizing: border-box;
            user-select: none;
            width: 20%;
            min-width: 12.5rem;
            max-width: 95vw;
            height: auto;
            border-radius: 4px;
            color: #282d30;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: #fdfdfe;
            border: 1px solid #ebeced;
          }

          .wrapper.hover:not(.disabled),
          .wrapper.focus:not(.disabled) {
            border-color: #0054fe;
            background-color: #fdfdfe;
          }

          .wrapper.disabled {
            color: #ebeced;
            border-color: #ebeced;
            cursor: not-allowed;
            opacity: 0.5;
          }

          textarea {
            background-color: transparent;
            box-shadow: none;
            display: block;
            font-family: \\"Circular Std Book\\", \\"PingFang SC\\", -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif;
            font-size: 0.875rem;
            width: 100%;
            height: 100%;
            min-height: 6.25rem;
            resize: none;
            border: none;
            outline: none;
            padding: calc(16px * 0.875) calc(16px * 0.75);
          }

          textarea:disabled {
            cursor: not-allowed;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-textarea-placeholder {
            color: #9b9eac;
          }

          textarea:-webkit-autofill,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:focus {
            -webkit-background-clip: text;
          }

          textarea:-webkit-autofill,
          textarea:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
          }
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fdfdfe inset !important;
          }
        </style></div><div class=\\"wrapper   lined  \\"><textarea></textarea><style>
          .wrapper {
            position: inherit;
            display: inline-flex;
            box-sizing: border-box;
            user-select: none;
            width: initial;
            min-width: 12.5rem;
            max-width: 95vw;
            height: auto;
            border-radius: 4px;
            color: #282d30;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: #fdfdfe;
            border: 1px solid #ebeced;
          }

          .wrapper.hover:not(.disabled),
          .wrapper.focus:not(.disabled) {
            border-color: #0054fe;
            background-color: #fdfdfe;
          }

          .wrapper.disabled {
            color: #ebeced;
            border-color: #ebeced;
            cursor: not-allowed;
            opacity: 0.5;
          }

          textarea {
            background-color: transparent;
            box-shadow: none;
            display: block;
            font-family: \\"Circular Std Book\\", \\"PingFang SC\\", -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif;
            font-size: 0.875rem;
            width: 100%;
            height: 100%;
            min-height: 100px;
            resize: none;
            border: none;
            outline: none;
            padding: calc(16px * 0.875) calc(16px * 0.75);
          }

          textarea:disabled {
            cursor: not-allowed;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-textarea-placeholder {
            color: #9b9eac;
          }

          textarea:-webkit-autofill,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:focus {
            -webkit-background-clip: text;
          }

          textarea:-webkit-autofill,
          textarea:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
          }
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fdfdfe inset !important;
          }
        </style></div><div class=\\"wrapper   solid  \\"><textarea></textarea><style>
          .wrapper {
            position: inherit;
            display: inline-flex;
            box-sizing: border-box;
            user-select: none;
            width: initial;
            min-width: 12.5rem;
            max-width: 95vw;
            height: auto;
            border-radius: 4px;
            color: #282d30;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            background-color: #f9fafb;
            border: transparent;
          }

          .wrapper.hover:not(.disabled),
          .wrapper.focus:not(.disabled) {
            border-color: transparent;
            background-color: #e8f4ff;
          }

          .wrapper.disabled {
            color: #ebeced;
            border-color: #ebeced;
            cursor: not-allowed;
            opacity: 0.5;
          }

          textarea {
            background-color: transparent;
            box-shadow: none;
            display: block;
            font-family: \\"Circular Std Book\\", \\"PingFang SC\\", -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif;
            font-size: 0.875rem;
            width: 100%;
            height: 100%;
            min-height: 6.25rem;
            resize: none;
            border: none;
            outline: none;
            padding: calc(16px * 0.875) calc(16px * 0.75);
          }

          textarea:disabled {
            cursor: not-allowed;
          }

          ::placeholder,
          ::-moz-placeholder,
          :-ms-input-placeholder,
          ::-webkit-textarea-placeholder {
            color: #9b9eac;
          }

          textarea:-webkit-autofill,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:focus {
            -webkit-background-clip: text;
          }

          textarea:-webkit-autofill,
          textarea:-webkit-autofill:active {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
          }
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #e8f4ff inset !important;
          }
        </style></div></div>"
`;
